deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyagi-config
  labels: 
    first: app
spec: # Behaviour of replicaset
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels: 
        app: web
    spec: # behavour of pod
      containers:
        - name: tyagi-shopkart
          image: himalayat/shopkart:v1.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: tyagi-service
spec:
  selector: 
    app: web
  ports:
    - protocol: Tcp
      port: 85
      targetPort: 80
  type: ClusterIP
