deployment2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tyagi-deployment
  labels:
    app: veg-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: veg-app

  template:
    metadata:
      labels:
        app: veg-app

    spec:
      containers:
        - name: tyagi-veg
          image: himalayat/veg:v1.0
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service

metadata:
  name: tyagi-service

spec:
  selector:
    app: veg-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
