ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyagi-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tyagi-service
                port:
                  number: 80
